--- a/src/model/Image_to_video_notebook.ipynb
+++ b/src/model/Image_to_video_notebook.ipynb
@@ -37,11 +37,15 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Avatar Fashion Fit - image to vide generation\n",
+        "## Image to video generation\n",
         "- Key requirements:\n",
         "    - Model: https://github.com/Tencent-Hunyuan/HunyuanVideo-I2V\n",
         "    - ComfyUI: https://github.com/comfyanonymous/ComfyUI\n",
-        "    - GPU resource: this notebook running env is Google Colab with one T4 GPU"
+        "    - GPU resource: this notebook running env is Google Colab with one T4 GPU\n",
+        "- Steps:\n",
+        "    - Clone required repos, set up environments\n",
+        "    - Download required pre-trained models, refer to https://huggingface.co/tencent/HunyuanVideo-I2V, https://github.com/Tencent-Hunyuan/HunyuanVideo-I2V\n",
+        "    - Start the ComfyUI server, refer to https://github.com/comfyanonymous/ComfyUI for details\n"
       ],
       "metadata": {
         "id": "JGjdzmGwWIaI"
