--- a/src/model/Image_to_video_notebook.ipynb
+++ b/src/model/Image_to_video_notebook.ipynb
@@ -836,8 +836,7 @@
     {
       "cell_type": "code",
       "source": [
-        "### Download the pre-trained models from the following link,\n",
-        "### https://drive.google.com/drive/folders/1TJNNql7UfDPVgHJuItDDjowycN5jpC5o\n",
+        "### Download the pre-trained models\n",
         "### See the Hunyuan model details at: https://huggingface.co/tencent/HunyuanVideo-I2V and https://github.com/Tencent-Hunyuan/HunyuanVideo-I2V\n",
         "\n",
         "### clip\n",
